[FE] fix: tooltip z-index 수정

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,3 +25,7 @@ body {
 *::-webkit-scrollbar-thumb {
   @apply bg-gray-300 rounded-full border-0;
 }
+
+.recharts-tooltip-wrapper {
+  z-index: 10;
+}
